# potenup3-04_Agent

./: .gitignore  01_StructuredOutput.ipynb  02_Message.ipynb  02_Navershop.ipynb  03_Memory.ipynb  03_MemorySubagent.ipynb  03_RecommenderSystem_Memory.ipynb  03_Subagent.ipynb  04_Middleware1.ipynb  04_Middleware과제1.ipynb  05_Middleware2.ipynb  06_RAG1.ipynb  07_RAG2.ipynb  08_RAG_Example.ipynb  09_LangGraph.ipynb  Gemma4_server.ipynb  main.py  pyproject.toml  wt_day4-콘텐츠기반 추천시스템.ipynb  wt_day5-유저기반 추천시스템.ipynb
data/: ai.txt
