[project]
name = "04-agent-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "langchain[anthropic,google-genai]>=1.2.15",
    "langchain-openai>=1.1.13",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
    "langchain-google-community>=3.0.5",
    "ddgs>=9.13.1",
    "langchain-community>=0.4.1",
    "youtube-search>=2.2.0",
    "google-auth-oauthlib>=1.3.1",
    "requests>=2.33.1",
    "beautifulsoup4>=4.14.3",
    "langgraph>=1.1.8",
    "pandas>=3.0.2",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "duckduckgo-search>=8.1.1",
]
